<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/hotelPage"
        android:enabled="true"
        android:icon="@drawable/ic_hotel"
        android:title="@string/nav_hotel_label"/>
    <item
        android:id="@+id/carPage"
        android:enabled="true"
        android:icon="@drawable/ic_car"
        android:title="@string/nav_car_label"/>
    <item
        android:id="@+id/transitPage"
        android:enabled="true"
        android:icon="@drawable/ic_transit"
        android:title="@string/nav_transit_label"/>
    <item
        android:id="@+id/bookingPage"
        android:enabled="true"
        android:icon="@drawable/ic_booking"
        android:title="@string/nav_booking_label"/>
    <item
        android:id="@+id/profilePage"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile_label"/>
</menu>